# markedly

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
docs/: components.md
example/: Cargo.toml
example/resources/mark/: ui.mark
example/src/: main.rs
language-markedly/: package.json
language-markedly/grammars/: markedly.cson
language-markedly/settings/: language-markedly.cson
language-markedly/snippets/: language-markedly.cson
language-markedly/spec/: language-markedly-spec.coffee
markedly/: Cargo.toml
markedly-ggez/: Cargo.toml
markedly-ggez/src/: lib.rs
markedly/src/: component.rs  error.rs  events.rs  lib.rs  ui.rs
markedly/src/class/: background.rs  button.rs  classes.rs  container.rs  mod.rs
markedly/src/input/: mod.rs
markedly/src/render/: mod.rs
markedly/src/scripting/: mod.rs  runtime.rs  value.rs
markedly/src/template/: attributes.rs  component.rs  language.pest  mod.rs  parse.rs  style.rs  template.rs  value.rs
