[package]
name = "markedly"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
pest = "1"
pest_derive = "1"
nalgebra = "0.13"
palette = "0.3"
metrohash = "1"
lyon = "0.10"

# Perhaps move this to an external crate and make the core generic over
# scripting backends
rlua = "0.13"
